--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Brandon-Pfeiffer/friend-finder/issues"
   },
-  "homepage": "https://github.com/Brandon-Pfeiffer/friend-finder#readme"
+  "homepage": "https://github.com/Brandon-Pfeiffer/friend-finder#readme",
+  "dependencies": {
+    "path": "^0.12.7"
+  }
 }
